--- a/app/src/main/res/layout/activity_diet_product_show.xml
+++ b/app/src/main/res/layout/activity_diet_product_show.xml
@@ -64,10 +64,10 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginEnd="4dp"
-            android:layout_marginLeft="4dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginRight="4dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
             android:background="@android:color/darker_gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -75,14 +75,41 @@
 
         <View
 
-            android:id="@+id/view2"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:background="@android:color/darker_gray"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewProductSaturatedFats" />
+
+        <View
+
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
+            android:background="@android:color/darker_gray"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewProductUnsaturatedFats" />
+
+        <View
+
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginEnd="4dp"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginStart="4dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:background="@android:color/darker_gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -90,13 +117,14 @@
             app:layout_constraintTop_toBottomOf="@+id/textViewProductSugars" />
 
         <View
+            android:id="@+id/view"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginEnd="4dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="4dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:background="@android:color/darker_gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -109,7 +137,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="4dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:background="@android:color/darker_gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -123,20 +151,7 @@
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginStart="4dp"
-            android:layout_marginTop="8dp"
-            android:background="@android:color/darker_gray"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewProductProteins" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:background="@android:color/darker_gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -157,8 +172,8 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
-            android:layout_marginTop="16dp"
-            android:text="0"
+            android:layout_marginTop="8dp"
+            android:text="@string/zero"
             app:layout_constraintEnd_toStartOf="@+id/textViewGrams1"
             app:layout_constraintTop_toBottomOf="@+id/editTextProductWeight" />
 
@@ -168,8 +183,8 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
-            android:layout_marginTop="16dp"
-            android:text="0"
+            android:layout_marginTop="8dp"
+            android:text="@string/zero"
             app:layout_constraintEnd_toStartOf="@+id/textViewGrams2"
             app:layout_constraintTop_toBottomOf="@+id/textViewProductProteins" />
 
@@ -179,17 +194,17 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
-            android:layout_marginTop="16dp"
-            android:text="0"
+            android:layout_marginTop="8dp"
+            android:text="@string/zero"
             app:layout_constraintEnd_toStartOf="@+id/textViewGrams3"
-            app:layout_constraintTop_toBottomOf="@+id/textViewProductFats" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewProductUnsaturatedFats" />
 
         <TextView
             android:id="@+id/textViewProductName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Product Name"
+            android:text="@string/product_name"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -201,10 +216,9 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="16dp"
             android:text="@string/grams_short"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewProductFats" />
+            app:layout_constraintTop_toTopOf="@+id/textViewProductCarbs" />
 
         <TextView
             android:id="@+id/textViewGrams2"
@@ -212,10 +226,9 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="16dp"
             android:text="@string/grams_short"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewProductProteins" />
+            app:layout_constraintTop_toTopOf="@+id/textViewProductFats" />
 
         <TextView
             android:id="@+id/textViewGrams1"
@@ -240,24 +253,13 @@
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:gravity="end"
+            android:hint="@string/zero"
             android:inputType="number"
             android:selectAllOnFocus="true"
-            android:text="0"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewProductName" />
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:text="@string/weight"
-            app:layout_constraintBottom_toBottomOf="@+id/editTextProductWeight"
-            app:layout_constraintStart_toStartOf="@+id/editTextProductWeight" />
 
         <TextView
             android:id="@+id/textView9"
@@ -275,9 +277,10 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
-            android:text="0"
+            android:layout_marginTop="8dp"
+            android:text="@string/zero"
             app:layout_constraintEnd_toStartOf="@+id/textViewGrams6"
-            app:layout_constraintTop_toTopOf="@+id/textViewGrams6" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewProductSugars" />
 
         <TextView
             android:id="@+id/textViewGrams6"
@@ -285,10 +288,9 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="16dp"
             android:text="@string/grams_short"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewProductSugars" />
+            app:layout_constraintTop_toTopOf="@+id/textViewProductCalories" />
 
         <TextView
             android:id="@+id/textView6"
@@ -306,9 +308,10 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
-            android:text="0"
+            android:layout_marginTop="8dp"
+            android:text="@string/zero"
             app:layout_constraintEnd_toStartOf="@+id/textViewGrams4"
-            app:layout_constraintTop_toTopOf="@+id/textViewGrams4" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewProductCarbs" />
 
         <TextView
             android:id="@+id/textViewGrams4"
@@ -316,10 +319,9 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="16dp"
             android:text="@string/grams_short"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewProductCarbs" />
+            app:layout_constraintTop_toTopOf="@+id/textViewProductFiber" />
 
         <TextView
             android:id="@+id/textView12"
@@ -337,9 +339,10 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
-            android:text="0"
+            android:layout_marginTop="8dp"
+            android:text="@string/zero"
             app:layout_constraintEnd_toStartOf="@+id/textViewGrams5"
-            app:layout_constraintTop_toTopOf="@+id/textViewGrams5" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewProductFiber" />
 
         <TextView
             android:id="@+id/textViewGrams5"
@@ -347,19 +350,100 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="16dp"
             android:text="@string/grams_short"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewProductFiber" />
+            app:layout_constraintTop_toTopOf="@+id/textViewProductSugars" />
 
         <TextView
-            android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            android:text="TextView"
-            app:layout_constraintTop_toTopOf="@+id/view2"
-            tools:layout_editor_absoluteX="60dp" />
+            android:layout_marginLeft="24dp"
+            android:layout_marginStart="24dp"
+            android:text="@string/saturated_fats"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textViewProductSaturatedFats" />
+
+        <TextView
+            android:id="@+id/textViewProductSaturatedFats"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/zero"
+            app:layout_constraintEnd_toStartOf="@+id/textViewGrams10"
+            app:layout_constraintTop_toBottomOf="@+id/textViewProductFats" />
+
+        <TextView
+            android:id="@+id/textViewGrams10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:text="@string/grams_short"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textViewProductSaturatedFats" />
+
+        <TextView
+            android:id="@+id/textViewProductUnsaturatedFats"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/zero"
+            app:layout_constraintEnd_toStartOf="@+id/textViewGrams11"
+            app:layout_constraintTop_toBottomOf="@+id/textViewProductSaturatedFats" />
+
+        <TextView
+            android:id="@+id/textViewGrams11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:text="@string/grams_short"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textViewProductUnsaturatedFats" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginStart="24dp"
+            android:text="@string/un_saturated_fats"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textViewProductUnsaturatedFats" />
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:entries="@array/product_value_choice"
+            android:prompt="@string/grams"
+            app:layout_constraintBottom_toBottomOf="@+id/editTextProductWeight"
+            app:layout_constraintStart_toStartOf="@+id/editTextProductWeight" />
+
+        <Button
+            android:id="@+id/button2"
+            style="@style/ButtonAcceptGreen"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/accept"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+
+        <Button
+            android:id="@+id/button3"
+            style="@style/ButtonDeleteRed"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/delete"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+
     </android.support.constraint.ConstraintLayout>
 
 </ScrollView>
