--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#0096f0</color>
     <color name="color_main_activity_statusbar">#0078f0</color>
     <color name="colorBackground">#fafafa</color>
+    <color name="colorButtonGreen">#79da59</color>
+    <color name="colorButtonRed">#be1f1c</color>
 </resources>
