--- a/app/src/main/res/layout/activity_diet_product_show.xml
+++ b/app/src/main/res/layout/activity_diet_product_show.xml
@@ -28,8 +28,8 @@
 
         <ImageView
             android:id="@+id/productImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
             android:layout_marginEnd="32dp"
             android:layout_marginLeft="32dp"
             android:layout_marginRight="32dp"
@@ -60,7 +60,6 @@
             app:layout_constraintTop_toTopOf="@+id/textViewProductFats" />
 
         <View
-
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginEnd="4dp"
@@ -74,7 +73,6 @@
             app:layout_constraintTop_toBottomOf="@+id/textViewProductFats" />
 
         <View
-
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginEnd="4dp"
@@ -88,7 +86,6 @@
             app:layout_constraintTop_toBottomOf="@+id/textViewProductSaturatedFats" />
 
         <View
-
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginEnd="4dp"
@@ -102,7 +99,6 @@
             app:layout_constraintTop_toBottomOf="@+id/textViewProductUnsaturatedFats" />
 
         <View
-
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginEnd="4dp"
@@ -275,22 +271,12 @@
             android:id="@+id/textViewProductCalories"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/zero"
-            app:layout_constraintEnd_toStartOf="@+id/textViewGrams6"
-            app:layout_constraintTop_toBottomOf="@+id/textViewProductSugars" />
-
-        <TextView
-            android:id="@+id/textViewGrams6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:text="@string/grams_short"
+            android:layout_marginTop="8dp"
+            android:text="@string/zero"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textViewProductCalories" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewProductSugars" />
 
         <TextView
             android:id="@+id/textView6"
@@ -415,17 +401,18 @@
             app:layout_constraintTop_toTopOf="@+id/textViewProductUnsaturatedFats" />
 
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/spinnerChooser"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:entries="@array/product_value_choice"
-            android:prompt="@string/grams"
+            android:prompt="@string/options"
+            android:spinnerMode="dialog"
             app:layout_constraintBottom_toBottomOf="@+id/editTextProductWeight"
             app:layout_constraintStart_toStartOf="@+id/editTextProductWeight" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/buttonAcceptChanges"
             style="@style/ButtonAcceptGreen"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
@@ -435,7 +422,7 @@
             app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/buttonDelete"
             style="@style/ButtonDeleteRed"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
@@ -443,6 +430,22 @@
             android:text="@string/delete"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+
+        <ProgressBar
+            android:id="@+id/progressBarDietProductShowActivity"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/productImageView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/productImageView" />
 
     </android.support.constraint.ConstraintLayout>
 
