--- a/app/src/main/res/menu/menu_diet_product_add.xml
+++ b/app/src/main/res/menu/menu_diet_product_add.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.brus5.lukaszkrawczak.fitx.Diet.DietProductShowActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/menuSearchProduct"
+        android:icon="@drawable/search_icon"
+        android:title="@string/search"
+        app:showAsAction="always" />
 </menu>
