--- a/app/src/main/res/layout/activity_diet_product_search.xml
+++ b/app/src/main/res/layout/activity_diet_product_search.xml
@@ -42,7 +42,7 @@
         android:id="@+id/listViewShowProducts"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_below="@id/editTextSearchProduct"
+        android:layout_below="@id/textViewProductSearch"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -50,5 +50,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewProductSearch" />
+
+    <TextView
+        android:id="@+id/textViewProductSearch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="4dp"
+        android:text="@string/value_per_100_g"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextSearchProduct" />
+
 </android.support.constraint.ConstraintLayout>
