--- a/app/src/main/res/layout/activity_diet_product_show.xml
+++ b/app/src/main/res/layout/activity_diet_product_show.xml
@@ -12,6 +12,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ImageView
+            android:id="@+id/imageViewShowProductVerified"
+            android:layout_width="12sp"
+            android:layout_height="12sp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@+id/textViewProductName"
+            app:layout_constraintStart_toEndOf="@+id/textViewProductName"
+            app:layout_constraintTop_toTopOf="@+id/textViewProductName"
+            app:srcCompat="@drawable/icon_verified" />
+
         <android.support.design.widget.AppBarLayout
             android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
