--- a/app/src/main/res/layout/activity_training.xml
+++ b/app/src/main/res/layout/activity_training.xml
@@ -50,7 +50,7 @@
         android:id="@+id/listViewTrainingActivity"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:background="#FFF"
+        android:background="@color/colorBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
