--- a/app/src/main/res/menu/menu_training_exercise_search.xml
+++ b/app/src/main/res/menu/menu_training_exercise_search.xml
@@ -1,9 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.brus5.lukaszkrawczak.fitx.Diet.DietProductShowActivity">
+    tools:context="com.brus5.lukaszkrawczak.fitx.Training.TrainingActivity">
     <item
-        android:id="@+id/menuSearchProduct"
+        android:id="@+id/menu_search_exercise"
         android:icon="@drawable/search_icon"
         android:title="@string/search"
         app:showAsAction="always" />
