--- a/app/src/main/res/layout/activity_training_excercise_list.xml
+++ b/app/src/main/res/layout/activity_training_excercise_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Training.TrainingExcerciseList">
+    tools:context=".Training.TrainingExcerciseListActivity">
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
