--- a/app/src/main/res/layout/activity_training_excercise_list.xml
+++ b/app/src/main/res/layout/activity_training_excercise_list.xml
@@ -18,4 +18,19 @@
             android:background="@color/color_main_activity_statusbar"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
     </android.support.design.widget.AppBarLayout>
+
+    <ListView
+        android:id="@+id/listViewTrainingActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_below="@id/textViewProductSearch"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+
 </android.support.constraint.ConstraintLayout>
