--- a/app/src/main/res/layout/training_excercise_row.xml
+++ b/app/src/main/res/layout/training_excercise_row.xml
@@ -23,6 +23,7 @@
         android:layout_alignParentStart="true"
         android:text="@string/button_training_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
