--- a/app/src/main/res/layout/diet_meal_row.xml
+++ b/app/src/main/res/layout/diet_meal_row.xml
@@ -186,7 +186,7 @@
             app:layout_constraintTop_toTopOf="@+id/textView42" />
 
         <TextView
-            android:id="@+id/dietMealImage"
+            android:id="@+id/dietTimeStamp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TextView"
