--- a/app/src/main/res/layout/activity_training_details.xml
+++ b/app/src/main/res/layout/activity_training_details.xml
@@ -28,6 +28,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:onClick="onClick"
         android:text="@string/delete"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
