--- a/app/src/main/res/menu/menu_training_exercise_add.xml
+++ b/app/src/main/res/menu/menu_training_exercise_add.xml
@@ -3,8 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.brus5.lukaszkrawczak.fitx.Training.TrainingDetailsActivity">
     <item
+        android:id="@+id/menu_delete_exercise"
+        android:icon="@android:drawable/ic_menu_delete"
+        android:title="@string/delete"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/menu_save_exercise"
         android:icon="@drawable/icon_accept"
         android:title="@string/search"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 </menu>
